# quetz

./: .gitignore  Dockerfile  environment.yml  pixi.toml  pyproject.toml  user.Dockerfile
.github/workflows/: docker-build.yml
.run/: Run Quetz.run.xml
quetz/: cli.py  config.py  main.py  pkgstores.py  utils.py
quetz/jobs/: handlers.py  rest_models.py  runner.py
quetz/tasks/: reindexing.py
quetz/testing/: fixtures.py
quetz/tests/: test_tasks.py
quetz/tests/data/imports/: channel_config.json
